--- a/MODULO_2/PHP/034_Ejercicio_28/expedientes/styles.css
+++ b/MODULO_2/PHP/034_Ejercicio_28/expedientes/styles.css
@@ -61,8 +61,8 @@ h1 {
 }
 
 .card-content img {
-    width: 1rem;
-    height: 1rem;
+    width: 25px;
+    height: 25px;
     object-fit: cover;
     border-radius: 50%;
     margin-right: 1rem;
