--- a/MODULO_2/PHP/034_Ejercicio_28/expedientes/styles.css
+++ b/MODULO_2/PHP/034_Ejercicio_28/expedientes/styles.css
@@ -63,8 +63,8 @@ tr:nth-child(even) {
 }
 
 .table-img {
-    max-width: 1rem;
-    min-height: 1rem;
+    max-width: 30px;
+    max-height: 30px;
     object-fit: cover;
     border-radius: 50%;
 }
