--- a/MODULO_2/PHP/034_Ejercicio_28/expedientes/styles.css
+++ b/MODULO_2/PHP/034_Ejercicio_28/expedientes/styles.css
@@ -49,8 +49,8 @@ table, th, td {
 
 th, td {
     padding: 1rem;
-    text-align: left;
-    vertical-align: top;
+    text-align: center;
+    vertical-align: middle;
 }
 
 th {
