uploaded foto styles

--- a/MODULO_2/PHP/034_Ejercicio_28/expedientes/styles.css
+++ b/MODULO_2/PHP/034_Ejercicio_28/expedientes/styles.css
@@ -133,3 +133,10 @@ a:hover {
     font-size: 14px;
     color: #555;
 }
+
+.foto-alumno {
+    max-width: 100px;
+    height: auto;
+    border-radius: 50%;
+    border: 2px solid #ddd;
+}
