--- a/MODULO_2/PHP/034_Ejercicio_28/expedientes/styles.css
+++ b/MODULO_2/PHP/034_Ejercicio_28/expedientes/styles.css
@@ -120,6 +120,7 @@ a {
     text-decoration: none;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin-top: 1rem;
 }
 
 input[type="submit"]:hover,
